@@ -1,10 +1,10 @@
 /*
- * Copyright (c) 2018, 2023, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2018, 2025, Oracle and/or its affiliates. All rights reserved.
  * 
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * The contents of this file are subject to the terms of either the Universal Permissive License
- * v 1.0 as shown at http://oss.oracle.com/licenses/upl
+ * v 1.0 as shown at https://oss.oracle.com/licenses/upl
  *
  * or the following license:
  *
@@ -52,7 +52,7 @@ public final class SecurityManagerFactory {
 		try {
 			if (className != null) {
 				Class<? extends Object> c = Class.forName(className);
-				instance = (ISecurityManager) c.newInstance();
+				instance = (ISecurityManager) c.getDeclaredConstructor().newInstance();
 			}
 		} catch (Exception e) {
 			LOGGER.log(Level.SEVERE, "Could not create Security manager for className. Using default! Exception was:", //$NON-NLS-1$
